# trainerApp

./: .gitignore  .gitmodules  CMakeLists.txt  Primitives.h  Readme.md  VocalTrainer-Bridging-Header.h  copysounds.cmake  cpputils.cmake  include.cmake
Logic/: ApplicationModel.cpp  ApplicationModel.h  ApplicationModel.mm  CMakeLists.txt  Logic copy-Info.plist  logic.cmake
Logic/AudioInput/: AubioPitchDetector.cpp  AudioAverageInputLevelMonitor.cpp  AudioAverageInputLevelMonitor.h  AudioInputDataCollector.cpp  AudioInputDataCollector.h  AudioInputPitchesRecorder.cpp  AudioInputPitchesRecorder.h  AudioInputReader.h  AudioInputRecorder.cpp  AudioInputRecorder.h  AudioToolboxInputReader.cpp  AudioToolboxInputReader.h  AudioUtils.cpp  AudioUtils.h  Pitch.cpp  Pitch.h  PitchDetection.pri  PitchDetectionSmoothingAudioBuffer.cpp  PitchDetectionSmoothingAudioBuffer.h  PitchDetector.h  PitchDuration.cpp  PitchDuration.h  PitchInputReader.cpp  PitchInputReader.h  PitchInputReaderCollector.cpp  PitchInputReaderCollector.h  PitchesCollector.h  PitchesMutableList.cpp  PitchesMutableList.h  PitchesRecorder.cpp  PitchesRecorder.h  PortAudioInputReader.cpp  PortAudioInputReader.h  PortAudioUtils.cpp  WAVFile.cpp  WAVFile.h  audioinput.cmake
Logic/BaseAudio/: AudioStreamDescription.cpp  AudioStreamDescription.h
Logic/Controllers/: InterControllerCommunicationEvents.h  ProjectController.cpp  ProjectController.h  RecordingsListController.cpp  RecordingsListController.h  SingingCompletionFlow.h  SongCompletionFlow.h
Logic/Drawers/: Drawer.cpp  Drawer.h  DrawerColor.cpp  DrawerColor.h  MetalNvgDrawer.cpp  MetalNvgDrawer.h  NvgDrawer.cpp  NvgDrawer.h  OpenGLNvgDrawer.cpp  OpenGLNvgDrawer.h  QDrawer.cpp  QDrawer.h  VocalTrainerColorUtils.cpp  VocalTrainerColorUtils.h
Logic/Events/: BaseMouseEventsReceiver.cpp  BaseMouseEventsReceiver.h  BaseSynchronizedMouseEventsReceiver.cpp  BaseSynchronizedMouseEventsReceiver.h  MouseClickChecker.cpp  MouseClickChecker.h  MouseEventsReceiver.h
Logic/FFT/: FFT.cpp  FFT.h
Logic/Logic.xcodeproj/: project.pbxproj
Logic/LogicTests/: SerializationTests.cpp  VxFileTests.cpp
Logic/LogiciOS/: LogiciOS.h
Logic/LogiciOSTests/: LogiciOSTests.swift
Logic/Manager/: AudioInputManager.cpp  AudioInputManager.h  MainController.cpp  MainController.h  PlaybackBoundsSelectionController.cpp  PlaybackBoundsSelectionController.h  WorkspaceZoomController.cpp  WorkspaceZoomController.h  ZoomController.h
MetalTest/: CMakeLists.txt  MetalTestWidget.h  MetalTestWidget.mm  WorkspaceView.mm  main.cpp  main.mm
MetalTest/MetalTest/: AppDelegate.h  AppDelegate.m  Info.plist  MetalView.h  MetalView.mm  MetalView2.h  MetalView2.mm  ViewController.h  ViewController.m  main.m
MetalTest/MetalTest.xcodeproj/: project.pbxproj
MetalTest/MetalTest/Base.lproj/: Main.storyboard
MetalTest/MetalTestTests/: MetalTestTests.m
MetalTest/MetalTestUITests/: MetalTestUITests.m
MvxGenerator/: CMakeLists.txt  Handler.h  Main.qml  main.cpp  main.qrc
MvxGenerator/MvxGenerator/: main.cpp
MvxGenerator/MvxGenerator.xcodeproj/: project.pbxproj
PitchDetection/: AubioPitchDetector.h  AudioAverageInputLevelMonitor.cpp  AudioAverageInputLevelMonitor.h  AudioInputReader.h  AudioInputReader_mac.cpp  AudioInputReader_win.cpp  AudioUtils.h  CMakeLists.txt  PitchDetection.pri  PitchDetection.pro  PitchDetectionSmoothingAudioBuffer.cpp  PitchDetectionSmoothingAudioBuffer.h  PitchInputReader.cpp  PitchInputReader.h  PitchInputReaderCollector.cpp  PitchInputReaderCollector.h  PitchesCollector.h  PortAudioInputReader.cpp  PortAudioInputReader.h  PortAudioUtils.cpp  PortAudioUtils.h  WAVFile.h  WavBufferReader.cpp  WavBufferReader.h  WavFileAudioInputReader.cpp  WavFileAudioInputReader.h  WavFilePitchesReader.cpp  WavFilePitchesReader.h  YinPitchDetector.cpp  YinPitchDetector.h  main.cpp
PitchDetection/tests/: PitchTest.cpp
Portmixer/: CMakeLists.txt  portmixer.cmake  px_mixer.c  px_win_wasapi.c
Qt/: AppSettings.cpp  AppSettings.h  BaseMainWindow.cpp  BaseMainWindow.h  BaseMainWindowMacOS.mm  CMakeLists.txt  Executors.cpp  Fonts.cpp  LoadTsf.cpp  MainWindow.cpp  MainWindow.h  MainWindowOsx.mm  Player.cpp  Player.h  ProjectItem.cpp  ProjectItem.h  ProjectWindow.cpp  ProjectWindow.h  QOpenglWorkspaceWidget.cpp  QOpenglWorkspaceWidget.h  QPainterWorkspaceWidget.cpp  QPainterWorkspaceWidget.h  QmlCppBridge.cpp  QmlCppBridge.h  QmlPitch.cpp  QmlPitch.h  QmlTimedPitch.cpp  QmlTimedPitch.h  QmlVxPitch.cpp  QmlVxPitch.h  QmlWorkspaceZoomController.cpp  QmlWorkspaceZoomController.h  QmlZoomController.cpp  QmlZoomController.h  QtCppBridge.cpp  QtCppBridge.h  QtMvxPlayer.cpp  QtMvxPlayer.h  QtVocalTrainer.pro  QtVocalTrainer.vcxproj  (+31 more)
QtVocalTrainer/: Main.qml  MainWindow.cpp  MainWindow.h  MainWindow.mm  MainWindowShared.cpp  QmlCppBridge.cpp  QmlCppBridge.h  QtVocalTrainer.pro  QtVocalTrainer.vcxproj  QtVocalTrainer.vcxproj.filters  app.cpp  app.h  appmacos.mm  appsettings.cpp  appsettings.h  basemainwindow.cpp  executors.cpp  fonts.cpp  fonts.h  loadtsf.cpp  main.cpp  main.mm  mainwindow.cpp  mainwindow.h  mainwindowosx.mm  player.cpp  player.h  project.pbxproj  qml.qrc  qmlopenglitem.cpp  qmlopenglitem.h  qmlpitch.cpp  qmlpitch.h  qmlpitchinputreader.cpp  qmlpitchinputreader.h  qmlplayer.cpp  qmlplayer.h  qmltimedpitch.cpp  qmltimedpitch.h  qmlvxpitch.cpp  (+21 more)
SwiftUtilsTests/: SwiftUtilsTests.swift
TextImagesGenerator/: main.cpp
VocalTrainer/: AppDelegate.h  AppDelegate.m  AppDelegate.swift  GLSceneDrawer.cpp  GLSceneDrawer.h  Info.plist  MainViewController.m  PitchGraphView.h  PitchGraphView.mm  PitchGraphView.swift  ViewController.swift  main.m  melody.mid
VocalTrainer.xcodeproj/: project.pbxproj
VocalTrainer.xcworkspace/: contents.xcworkspacedata
VocalTrainerApple/: Podfile
VocalTrainerTests/: BoostAssert.cpp  LoadTsf.cpp  MidiFileTest.cpp  MvxFileTests.cpp  VocalPartTests.cpp  VocalTrainerTests.swift  VxFileGeneratorTest.cpp  VxFileTests.cpp
VocalTrainerUITests/: VocalTrainerUITests.swift
VocalTrainerWinCLI/: VocalTrainer.sln  VoiceTrainer.sdf
include/: ctpl.h  portmixer.h
(+752 files in other folders)
